src/index.css
body {
	background-image: url("./websiteBackground.png");
}

a {
	color: whitesmoke;
	text-decoration: none;
	margin: 2%;
}

#homePage {
	display: grid;
	width: 100%;
	height: 100vh;
	grid-template-columns: repeat(5, 25%);
	grid-template-rows: repeat(10, 25%);
}

/*NAVBAR*/
.navHome {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
	border: 20px solid rgb(23, 23, 69);
	box-shadow: inset 0px 0px 80px rgb(23, 23, 69);
	background-color: #3f3f6a;
	color: whitesmoke;
	font-size: 20px;
	grid-column-start: 2;
	grid-column-end: 4;
	grid-row-start: 2;
	grid-row-end: 4;
}

.navPages {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-evenly;
	padding: 1%;
	border: 1px solid rgb(23, 23, 69);
	background-color: #3f3f6a;
	font-size: xx-large;
}
.navBarlinksHome{
	display:flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items:center;
	height:75%;
	width:100%;
}
.linksBoxPages{
	display:flex;
	justify-content: space-evenly;
	width:75%;
}
.iconBoxPages {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	width: 10%;
	height: 8rem;
}

.iconBoxHome {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	width: 8rem;
}


/*INFO CARDS*/
.CardContainer {
	display: grid;
	width: 100%;
	height: 100vh;
	grid-template-columns: repeat(20, 5%);
	grid-template-rows: repeat(50, 5%);
}

.card {
	display:flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	border-radius: 10px;
	background-color: rgb(245, 245, 245);
	box-shadow: 1px 1px 5px black;
	margin: 1%;
	padding: 3%;
}

.card >h1{
	font-size: 2rem;	
}
.card>h2{
	font-size: 1rem;
}
.card >a{
	color:rgb(10, 3, 114);
	font-size:1.5rem;
}
.title{
	border-left:1px solid black;
	border-bottom:1px solid black;
	font-size: 2rem;;
}


/* GRID ITEMS******************************************/
/*GRID ITEMS --- ABOUT-ME PAGE */
#background0{
	grid-column: 2 / span 10;
	grid-row: 4 / span 10;
	font-size: 1.5rem;
}
#background1{
	grid-column: 6 / span 10;
	grid-row:  14 / span 10;
	font-size: 1.5rem;
}
#goals{
	grid-column: 8 / span 10;
	grid-row: 30 / span 10;
	font-size: 1.5rem;
}
#skills{
	grid-column: 4 / span 10;
	grid-row: 43/ span 10;
	font-size: 1.5rem;
}
#title0{
	grid-column: 2 / span 8;
	grid-row: 27/ span 3;
}
#title1{
	grid-column: 2 / span 8;
	grid-row: 1/ span 3;
}
#title2{
	grid-column: 2 / span 8;
	grid-row: 40/ span 3;
}
/*GRID ITEMS --- BLOG PAGE */
#blog0{
	background-color:#526dda7a;
	grid-column: 4 / span 13;
	grid-row: 12 / span 5;
}
#blog1{
	background-color:#b7e7b187;
	grid-column: 8 / span 10;
	grid-row:  3 / span 8;
}
#blog2{
	background-color:#a344a68f;
	grid-column: 1 / span 7;
	grid-row:  2 / span 6;
}
/*GRID ITEMS --- PORTFOLIO PAGE */
#port0{
	grid-column: 3 / span 7;
	grid-row: 14 / span 7;
}
#port1{
	grid-column: 3 / span 4;
	grid-row: 2 / span 12;
}
#port2{
	grid-column: 7 / span 7;
	grid-row: 2 / span 6;
}
#port3{
	grid-column: 7 / span 7;
	grid-row: 8 / span 6;
}
#port4{
	grid-column: 10 / span 4;
	grid-row: 14/ span 7;
}
#portfolioInfo{
	background-color: #9494dd;
	color:#1e1e4b;
	border-radius:2px;
	box-shadow: none;
	grid-column: 15 / span 5;
	grid-row: 3 / span 9;
	padding:3%;
	font-size:2rem;
}
#iconBox0{
	display:flex;
	flex-direction: space-evenly;
	flex-wrap:wrap;
	background-color: #9494dd;
	padding:3%;
	grid-column: 15/ span 5;
	grid-row:  13/ span 7;
}
/*GRID ITEMS --- Anti-PORTFOLIO PAGE */
#port5{
	grid-column: 7 / span 4;
	grid-row: 2/ span 11;
}
#port6{
	grid-column: 12 / span 7;
	grid-row: 4 / span 8;
}
#antiPortfolioInfo{
	background-color: #9494dd;
	color: #1e1e4b;
	border: 3px solid #3f3f6a;
	border-radius:2px;
	box-shadow: none;
	grid-column: 2 / span 4;
	grid-row: 3 / span 11;
}


/*MOBILE**************************************************/
@media screen and (max-width:1300px){
	#background0{
		font-size:larger;
	}
	#background1{
		font-size: larger;
	}
	#goals{
		grid-column: 2 / span 10;
		grid-row: 4 / span 4;
		font-size: larger;
	}
	#skills{
		grid-column: 4 / span 10;
		grid-row: 24/ span 4;
		font-size: larger;
	}
	#portfolioInfo{
		font-size:1.5rem;
	}
	.card >a{
		font-size:1rem;
	}
}

@media screen and (max-width:800px){
	.navPages {
		display: flex;
		flex-direction: column;
		align-items: center;
		font-size: 1rem;
	}
	.linksBoxPages{
		width:90%;
	}
	.iconBoxPages {
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
		align-items: center;
		width: 50%;
		height: 8rem;
	}

	.CardContainer{
		display:flex;
		flex-direction:column;
	}
	.CardContainer>*{
		margin:5%;
		
	}
	.card >a{
		font-size:1.5rem;
	}
}

